[package]
name = "rmc-core"
version = "0.1.0"
authors = ["Noah Kennedy <noah.kennedy.professional@gmail.com>", "Isaiah Rondeau <isaiahrondeau@gmail.com>", "Wallace Watler <watlerathome@gmail.com>", "Cody Nettesheim <nettesheimcj@msoe.edu>"]
edition = "2018"
build = "build.rs"

[dependencies]
libbeaglebone = "0.5.0"
slog = "2.4.1"
log = "0.4.6"
slog-stdlog = "3.0.4-pre"
slog-scope = "4.1.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
serde = "1.0.87"
serde_derive = "1.0.87"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
atomic = "0.4.3"

#[build-dependencies.mml]
#version = "0.1"